; ModuleID = '/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_nimble.c_ble_gatt_add_primary_svcs.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_nimble.c_ble_gatt_add_primary_svcs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ble_gatt_svc_def = type { %struct.ble_gatt_chr_def*, i32 }
%struct.ble_gatt_chr_def = type { i32 }

@num_chr_dsc = common dso_local global i32 0, align 4
@BLE_GATT_SVC_TYPE_PRIMARY = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"Memory allocation for GATT characteristics failed\00", align 1
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ble_gatt_svc_def*, i32)* @ble_gatt_add_primary_svcs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ble_gatt_add_primary_svcs(%struct.ble_gatt_svc_def* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ble_gatt_svc_def*, align 8
  %5 = alloca i32, align 4
  store %struct.ble_gatt_svc_def* %0, %struct.ble_gatt_svc_def** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* @num_chr_dsc, align 4
  %7 = load i32, i32* @BLE_GATT_SVC_TYPE_PRIMARY, align 4
  %8 = load %struct.ble_gatt_svc_def*, %struct.ble_gatt_svc_def** %4, align 8
  %9 = getelementptr inbounds %struct.ble_gatt_svc_def, %struct.ble_gatt_svc_def* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, 1
  %12 = call i64 @calloc(i32 %11, i32 4)
  %13 = inttoptr i64 %12 to %struct.ble_gatt_chr_def*
  %14 = load %struct.ble_gatt_svc_def*, %struct.ble_gatt_svc_def** %4, align 8
  %15 = getelementptr inbounds %struct.ble_gatt_svc_def, %struct.ble_gatt_svc_def* %14, i32 0, i32 0
  store %struct.ble_gatt_chr_def* %13, %struct.ble_gatt_chr_def** %15, align 8
  %16 = load %struct.ble_gatt_svc_def*, %struct.ble_gatt_svc_def** %4, align 8
  %17 = getelementptr inbounds %struct.ble_gatt_svc_def, %struct.ble_gatt_svc_def* %16, i32 0, i32 0
  %18 = load %struct.ble_gatt_chr_def*, %struct.ble_gatt_chr_def** %17, align 8
  %19 = icmp eq %struct.ble_gatt_chr_def* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %2
  %21 = load i32, i32* @TAG, align 4
  %22 = call i32 @ESP_LOGE(i32 %21, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %23, i32* %3, align 4
  br label %25

24:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
